# pyhandlebars

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyhandlebars.pyi  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run.py
benchmarks/tools/: pybars3.py  python_handlebars.py
src/: lib.rs  utils.rs
tests/: test_examples.py  test_pyhandlebars.py
