[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "pyhandlebars"
requires-python = ">=3.10"
description = "Fast and Typed Python Implementation for Handlebars based on Rust."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "sukram42" }]
keywords = ["python-handlebars", "pyhandlebars", "handlebars", "template", "rust", "prompt", "prompt-template", "pydantic"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Markup",
]
dynamic = ["version"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/sukram42/pyhandlebars"
Repository = "https://github.com/sukram42/pyhandlebars"
Issues = "https://github.com/sukram42/pyhandlebars/issues"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pydantic>=2.12.5",
]
benchmarks = [
    "pydantic>=2.12.5",
    "pybars3>=0.9.7",
    "python-handlebars>=0.0.3",
    "jinja2>=3.0.0",
    "mako>=1.3.10",
    "ashes>=24.0.0",
    "django>=6.0.3",
    "tenjin>=1.1.1",
    "wheezy-template>=3.2.5",
    "chevron>=0.14.0",
    "pystache>=0.6.8",
    "cheetah3>=3.2.6.post1",
    "tornado>=6.5.4",
    "bottle>=0.13.4",
]

[tool.uv.dependency-groups]
benchmarks = {requires-python = ">=3.12"}
