[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "pyhandlebars"
requires-python = ">=3.10"
description = "Fast and Typed Python Implementation for Handlebars based on Rust."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "sukram42" }]
keywords = ["python-handlebars", "pyhandlebars", "handlebars", "template", "rust", "prompt", "prompt-template", "pydantic"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Markup",
]
dynamic = ["version"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/sukram42/pyhandlebars"
Repository = "https://github.com/sukram42/pyhandlebars"
Issues = "https://github.com/sukram42/pyhandlebars/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pydantic>=2.12.5",
]